--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,7 @@
 /*  your css code here. If applicable */
+.selector{
+	color:#00f;
+	background-color:#eee;
+	front-family:arial;
+		front-size:20px;
+}
